Bug 479940 - Global menu applet does not work in x11 session
Summary: Global menu applet does not work in x11 session
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Global Menu widget (other bugs)
Version First Reported In: 5.93.0
Platform: openSUSE Linux
: NOR major
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2024-01-17 12:00 UTC by DiabloCRP
Modified: 2024-02-20 15:06 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.0
Sentry Crash Report:


Attachments
No changes, still not work. (231.01 KB, image/png)
2024-02-06 00:06 UTC, DiabloCRP
Details

Note You need to log in before you can comment on or make changes to this bug.
Description DiabloCRP 2024-01-17 12:00:20 UTC
SUMMARY
***
Don't work in x11 session. In wayland session works as expected.
***


STEPS TO REPRODUCE
1.  Just add appmenu to panel or desktop - no reaction on opened windows

OBSERVED RESULT


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 
openSUSE Leap 15.5
(available in About System)
KDE Plasma Version: 6.0.80
KDE Frameworks Version: 5.249.0
Qt Version: 6.6.1

ADDITIONAL INFORMATION
Also checked in KaOS and KDENeon (with Plasma beta 2)
Comment 1 Axel 2024-02-05 17:54:56 UTC
is it still happening? if not change the status.
Comment 2 DiabloCRP 2024-02-06 00:06:47 UTC
Created attachment 165586 [details]
No changes, still not work.
Comment 3 Bug Janitor Service 2024-02-20 11:19:15 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kwindowsystem/-/merge_requests/147
Comment 4 Nicolas Fella 2024-02-20 13:29:49 UTC
Git commit e730f8eaff06515ba60f2e5f157783dc5a736adb by Nicolas Fella.
Committed on 20/02/2024 at 11:18.
Pushed by nicolasfella into branch 'master'.

[kwindowinfo] Fix mixup between applicationMenuServiceName and appMenuObjectPath

M  +6    -6    src/kwindowinfo.cpp

https://invent.kde.org/frameworks/kwindowsystem/-/commit/e730f8eaff06515ba60f2e5f157783dc5a736adb