[kwindowinfo] Fix mixup between applicationMenuServiceName and appMenuObjectPath

BUG: 479940